plugins {
    id 'java'
    id 'com.github.johnrengelman.shadow' version '5.2.0'
}

repositories {
    mavenLocal()

    maven {
        url 'https://jitpack.io/'
    }

    maven {
        url 'https://repo.codemc.io/repository/nms/'
    }

    mavenCentral()
}

shadowJar {
    configurations = [project.configurations.compile]
}

defaultTasks("copyFile")

dependencies {
    compileOnly 'org.bukkit:craftbukkit:1.15.2-R0.1-SNAPSHOT'
    compileOnly 'org.projectlombok:lombok:1.18.12'
    compileOnly 'com.github.LovesAsuna:VaultAPI:-SNAPSHOT'
    annotationProcessor 'org.projectlombok:lombok:1.18.12'
}

group = 'org.sct'
version = '2.0-SNAPSHOT'
description = 'PluginCore'
sourceCompatibility = '8'

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
    options.compilerArgs.add('-Xlint:deprecation')
    options.compilerArgs.add('-Xlint:unchecked')
}

task copyFile(type: Copy, dependsOn: shadowJar) {
    from('build/libs/')
    into('E:/work/1.15.2test/plugins/')
    include('PluginCore*.jar')
    rename {
        "PluginCore.jar"
    }
}
